[gd_scene load_steps=4 format=3 uid="uid://dpqsndip45d3a"]

[ext_resource type="Script" uid="uid://bidjb2iglivfn" path="res://testing/gsc_font_size_test.gd" id="1_8vitf"]
[ext_resource type="PackedScene" uid="uid://dsfw5q2dojfyj" path="res://actor_builders/inventory_system/gear_section_control.tscn" id="1_p34j0"]

[sub_resource type="GDScript" id="GDScript_3tggn"]
script/source = "extends Control

func _process(_delta: float) -> void:
	var control := get_child(0) as Control
	custom_minimum_size = control.size * control.scale
	#global_util.print_once(custom_minimum_size)
"

[node name="gsc_font_test" type="Node2D"]
script = ExtResource("1_8vitf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="autosizer" type="Control" parent="HBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_3tggn")

[node name="GearSectionControl" parent="HBoxContainer/autosizer" instance=ExtResource("1_p34j0")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 110.0
offset_bottom = 23.0
grow_horizontal = 1
grow_vertical = 1

[node name="autosizer2" type="Control" parent="HBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_3tggn")

[node name="GearSectionControl2" parent="HBoxContainer/autosizer2" instance=ExtResource("1_p34j0")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 110.0
offset_bottom = 737.0
grow_horizontal = 1
grow_vertical = 1

[node name="autosizer3" type="Control" parent="HBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_3tggn")

[node name="GearSectionControl3" parent="HBoxContainer/autosizer3" instance=ExtResource("1_p34j0")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 110.0
offset_bottom = 737.0
grow_horizontal = 1
grow_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 559.0
offset_right = 887.0
offset_bottom = 892.0

[node name="autosizer5" type="Control" parent="VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_3tggn")

[node name="Label" type="Label" parent="VBoxContainer/autosizer5"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 16.0
offset_right = 879.0
offset_bottom = 39.0
text = "abcdefghijklmnopqrstuvwxyz1234567890-=!@#$%^&*()_+"

[node name="autosizer6" type="Control" parent="VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_3tggn")

[node name="Label2" type="Label" parent="VBoxContainer/autosizer6"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 12.0
offset_right = 879.0
offset_bottom = 35.0
text = "abcdefghijklmnopqrstuvwxyz1234567890-=!@#$%^&*()_+"

[node name="autosizer7" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2
script = SubResource("GDScript_3tggn")

[node name="Label3" type="Label" parent="VBoxContainer/autosizer7"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 8.0
offset_right = 879.0
offset_bottom = 31.0
text = "abcdefghijklmnopqrstuvwxyz1234567890-=!@#$%^&*()_+"

[node name="autosizer8" type="Control" parent="VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_3tggn")

[node name="autosizer4" type="Control" parent="VBoxContainer/autosizer8"]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_top = 4.0
offset_right = 879.0
offset_bottom = 4.0
script = SubResource("GDScript_3tggn")

[node name="Label4" type="Label" parent="VBoxContainer/autosizer8/autosizer4"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 879.0
offset_bottom = 45.0
text = "abcdefghijklmnopqrstuvwxyz1234567890-=!@#$%^&*()_+"
